      - ClientResource#entityBuffering now buffers non transient representations of
        unknown size. Necessary for GAE chunked issue.
      - Added Server#getActualPort() to return either the value of getPort()
        or getEphemeralPort() is the listening port is '0'.
      - Message#attributes is now a ConcurrentMap instead of a Map.
        Suggested by Tal Liron.
    - Enhancements
      - Added new HTTPS client connector based on the internal non-blocking NIO
        connector. Co-developped with NetDev.
    - Bug fixed
      - Throwing a ResourceException with a given status, was resulting in
        500 status being returned to the client instead of the given status.
        Reported by Avi Flax and Rhett Sutphin.
      - Fixed bug with unlimited IO timeouts in internal HTTP connector.
        Reported by Michael Guiral.
    - Misc
      - The simplified logging formatter (one line) is now available only in
        the Java SE edition as it could cause troubles with Java EE container
        and potentially GAE/Android as we reconfigure the default log manager
        programmatically. Reported by Kristoffer Gronowski and Bo Xing.
      - Moved all SSL dependencies from the engine into the "org.restlet.ext.ssl"
        extension, forcing it as a new extension for several other ones such as
        Jetty, Apache HTTP Client or Simple. This extension takes more importance
        as it also contains the new scalable HTTPS/NIO internal connector just
        added. Please ensure that your classpath is adjusted. This also helps
        keeping core org.restlet.jar size small.

- 2.1 Milestone 3 (03/31/2011)
    - Breaking changes
      - The new support of GWT 2.2 is not backward compatible with applications 
        based on previous versions of GWT.
    - API changes
      - Deprecated the Client#connectTimeout property as it is hard to find
        compared to other connector parameters. Also, it isn't available for